<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DAL scholaris</string>
    <string name="action_settings">Settings</string>
    <string name="menu_fav">Favourites</string>
    <string name="menu_searchoptions">Search Options</string>
    <string name="menu_files">Files</string>
    <string name="menu_about">About</string>
    <string name="menu_ezproxy">EZproxy</string>
    <string name="menu_appsettings">Settings</string>    

</resources>